--- a/coding-events/coding-events/src/main/resources/templates/events/create.html
+++ b/coding-events/coding-events/src/main/resources/templates/events/create.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset=" UTF-8">
-    <title>Create Event</title>
-</head>
-<body>
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
-<h1>Create Event</h1>
+<header th:replace="fragments :: header"></header>
 
-<form method ="post" action ="/events/create">
-    <input type = "text" name="eventName">
-    <input type = "submit" value="Create Event">
+<form method="post">
+    <div class="form-group">
+        <label>Name
+            <input th:field="${event.name}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.name}"></p>
+    </div>
+    <div class="form-group">
+        <label>Description
+            <input th:field="${event.description}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.description}"></p>
+    </div>
+    <div class="form-group">
+        <label>Contact Email
+            <input th:field="${event.contactEmail}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.contactEmail}"></p>
+    </div>
+    <div class="form-group">
+        <label>Location
+            <input th:field="${event.eventLocation}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.eventLocation}"></p>
+    </div>
+    <div class="form-group">
+        <label>Type
+        <select th:field="${event.type}">
+            <option th:each="type : ${types}"
+                    th:value="${type}"
+                    th:text="${type.displayName}"
+            ></option>
+        </select>
+        </label>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-success">
+    </div>
 </form>
 
 </body>
