--- a/coding-events/coding-events/src/main/resources/templates/events/create.html
+++ b/coding-events/coding-events/src/main/resources/templates/events/create.html
@@ -31,6 +31,12 @@
         <p class="error" th:errors="${event.eventLocation}"></p>
     </div>
     <div class="form-group">
+        <label>Registration Required?
+            <input type=checkbox th:field="${event.registrationRequired}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.registrationRequired}"></p>
+    </div>
+    <div class="form-group">
         <label>Type
         <select th:field="${event.type}">
             <option th:each="type : ${types}"
@@ -39,6 +45,12 @@
             ></option>
         </select>
         </label>
+    </div>
+    <div class="form-group">
+        <label>Number of Attendees
+            <input type=number th:field="${event.attendees}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.attendees}"></p>
     </div>
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-success">
